Beta release! Added code to export a CSV file with the information related to the event registration. Small tweaks to some files I use for various reasons. Added an age function to participant for output to CSV, can be used elsewhere as well if I feel like it. There are probably other minor tweaks as well.

--- a/EventDirector/MainWindow.xaml
+++ b/EventDirector/MainWindow.xaml
@@ -20,6 +20,9 @@
             <MenuItem Header="Import">
                 <MenuItem Header="_Import Participants (CSV)" Click="MenuItem_Click" Uid="5" />
             </MenuItem>
+            <MenuItem Header="Export">
+                <MenuItem Header="_Export Participants (CSV)" Click="MenuItem_Click" Uid="8" />
+            </MenuItem>
             <MenuItem Header="Event Options">
                 <MenuItem Header="List Participants" Click="MenuItem_Click" Uid="7" />
                 <MenuItem Header="_Assign Bibs/Chips" Click="MenuItem_Click" Uid="6" />
