--- a/EventDirector/NewTimingPointWindow.xaml
+++ b/EventDirector/NewTimingPointWindow.xaml
@@ -5,9 +5,9 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:EventDirector"
         mc:Ignorable="d"
-        Title="NewTimingPointWindow" Height="260" Width="250" ResizeMode="NoResize"
+        Title="Timing Point" Height="260" Width="250" ResizeMode="NoResize"
         Closing="Window_Closing">
-    <Grid FocusManager.FocusedElement="{Binding ElementName=nameBox}">
+    <Grid>
         <Label Content="Name" HorizontalAlignment="Left" Margin="20,15,0,0" VerticalAlignment="Top" KeyUp="Keyboard_Up"/>
         <TextBox x:Name="nameBox" HorizontalAlignment="Left" Height="23" Margin="20,40,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="200"/>
         <Label Content="Distance" HorizontalAlignment="Left" Margin="20,65,20,0" VerticalAlignment="Top"/>
