--- a/EventDirector/MainWindow.xaml
+++ b/EventDirector/MainWindow.xaml
@@ -61,6 +61,9 @@
             <Button x:Name="eventsToggleEarlyStartButton" Visibility="Hidden" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0,0,180,0" Width="30" Height="30" Grid.Row="0" Grid.Column="0" Click="EventsToggleEarlyStartButton_Click" AutomationProperties.HelpText="Early Start"  Opacity="0.5">
                 <Image Source="pack://application:,,,/Icons/clock-8x.png" Height="20"/>
             </Button>
+            <Button x:Name="eventsToggleKioskButton" Visibility="Hidden" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0,0,215,0" Width="30" Height="30" Grid.Row="0" Grid.Column="0" Click="KioskButton_Click" AutomationProperties.HelpText="Disable Kiosk Mode">
+                <Image Source="pack://application:,,,/Icons/tablet-8x.png" Height="20" Margin="4,0,1,0"/>
+            </Button>
             <ListView x:Name="eventsListView" Height="200" VerticalAlignment="Top" Grid.Column="0" Grid.Row="1" SelectionChanged="EventsListView_SelectionChanged" SelectionMode="Single">
                 <ListView.View>
                     <GridView>
