Bug fixes and small additions. Added a window for checking on day of registrants (input via kiosk). Fixed a bug where day of race registrants weren't actually being put in the database. Shame. Shame.

--- a/EventDirector/MainWindow.xaml
+++ b/EventDirector/MainWindow.xaml
@@ -25,6 +25,7 @@
             </MenuItem>
             <MenuItem Header="Event Options">
                 <MenuItem Header="List Participants" Click="MenuItem_Click" Uid="7" />
+                <MenuItem Header="List Day Of Registrants" Click="MenuItem_Click" Uid="10" />
                 <MenuItem Header="Setup Kiosk" Click="MenuItem_Click" Uid="9" />
                 <!-- <MenuItem Header="_Assign Bibs/Chips" Click="MenuItem_Click" Uid="6" /> -->
             </MenuItem>
