--- a/EventDirector/DayOfParticipantsList.xaml
+++ b/EventDirector/DayOfParticipantsList.xaml
@@ -1,18 +1,18 @@
-﻿<Window x:Class="EventDirector.ParticipantsListWindow"
+﻿<Window x:Class="EventDirector.DayOfParticipantsListWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:EventDirector"
         mc:Ignorable="d"
-        Title="Participants" Height="800" Width="1200" Closed="Window_Closed">
+        Title="Day Of Registrants" Height="800" Width="1200" Closed="Window_Closed">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="40" />
             <RowDefinition Height="1*" />
         </Grid.RowDefinitions>
         <Label Grid.Row="0" Content="Event" HorizontalAlignment="Left" Margin="10,0,0,0" FontSize="18" VerticalAlignment="Center" Padding="0"/>
-        <ComboBox x:Name="eventComboBox" Grid.Row="0" Height="25" Width="150" HorizontalAlignment="Left" Margin="65,0,0,0" SelectedIndex="0" SelectionChanged="EventComboBox_SelectionChanged">
+        <ComboBox x:Name="dofEventComboBox" Grid.Row="0" Height="25" Width="150" HorizontalAlignment="Left" Margin="65,0,0,0" SelectedIndex="0" SelectionChanged="EventComboBox_SelectionChanged">
             <ComboBoxItem Content="All" />
         </ComboBox>
         <ListView x:Name="participantsListView" Grid.Row="1" Width="Auto" Height="Auto" ScrollViewer.HorizontalScrollBarVisibility="Auto">
@@ -20,13 +20,11 @@
                 <GridView>
                     <GridViewColumn Header="ID" DisplayMemberBinding="{Binding Identifier}" />
                     <GridViewColumn Header="EventID" DisplayMemberBinding="{Binding EventIdentifier}" />
-                    <GridViewColumn Header="Bib" DisplayMemberBinding="{Binding Bib}" />
-                    <GridViewColumn Header="Chip" DisplayMemberBinding="{Binding Chip}" />
-                    <GridViewColumn Header="Division" DisplayMemberBinding="{Binding Division}" />
-                    <GridViewColumn Header="First" DisplayMemberBinding="{Binding FirstName}" />
-                    <GridViewColumn Header="Last" DisplayMemberBinding="{Binding LastName}" />
+                    <GridViewColumn Header="Division" DisplayMemberBinding="{Binding DivisionIdentifier}" />
+                    <GridViewColumn Header="First" DisplayMemberBinding="{Binding First}" />
+                    <GridViewColumn Header="Last" DisplayMemberBinding="{Binding Last}" />
                     <GridViewColumn Header="Gender" DisplayMemberBinding="{Binding Gender}" />
-                    <GridViewColumn Header="Birthday" DisplayMemberBinding="{Binding Birthdate}" />
+                    <GridViewColumn Header="Birthday" DisplayMemberBinding="{Binding Birthday}" />
                     <GridViewColumn Header="Parent" DisplayMemberBinding="{Binding Parent}" />
                     <GridViewColumn Header="Street" DisplayMemberBinding="{Binding Street}" />
                     <GridViewColumn Header="Street 2" DisplayMemberBinding="{Binding Street2}" />
@@ -37,19 +35,11 @@
                     <GridViewColumn Header="Phone" DisplayMemberBinding="{Binding Phone}" />
                     <GridViewColumn Header="Mobile" DisplayMemberBinding="{Binding Mobile}" />
                     <GridViewColumn Header="Email" DisplayMemberBinding="{Binding Email}" />
-                    <GridViewColumn Header="Checked In" DisplayMemberBinding="{Binding CheckedIn}" />
-                    <GridViewColumn Header="EarlyStart" DisplayMemberBinding="{Binding EarlyStart}" />
-                    <GridViewColumn Header="Shirt Size" DisplayMemberBinding="{Binding ShirtSize}" />
-                    <GridViewColumn Header="Shirt 2" DisplayMemberBinding="{Binding SecondShirt}" />
-                    <GridViewColumn Header="Fleece" DisplayMemberBinding="{Binding Fleece}" />
-                    <GridViewColumn Header="Hat" DisplayMemberBinding="{Binding Hat}" />
-                    <GridViewColumn Header="Owes" DisplayMemberBinding="{Binding Owes}" />
-                    <GridViewColumn Header="ECID" DisplayMemberBinding="{Binding ECID}" />
-                    <GridViewColumn Header="EC Name" DisplayMemberBinding="{Binding ECName}" />
-                    <GridViewColumn Header="EC Phone" DisplayMemberBinding="{Binding ECPhone}" />
-                    <GridViewColumn Header="EC Email" DisplayMemberBinding="{Binding ECEmail}" />
+                    <GridViewColumn Header="EC Name" DisplayMemberBinding="{Binding EmergencyName}" />
+                    <GridViewColumn Header="EC Phone" DisplayMemberBinding="{Binding EmergencyPhone}" />
                     <GridViewColumn Header="Comments" DisplayMemberBinding="{Binding Comments}" />
                     <GridViewColumn Header="Other" DisplayMemberBinding="{Binding Other}" />
+                    <GridViewColumn Header="Other 2" DisplayMemberBinding="{Binding Other2}" />
                 </GridView>
             </ListView.View>
         </ListView>
