Features, speedups, fixes. Changed how we load the Application for Interop.Excel to attempt to make it more responsive. Removed unecessary files. Changed some settings in the project folders and removed a temporary key that shouldn't have been stored. Changed the name of a class to reflect what type of file it services for the next update. Added an about window that should properly showcase the git tag version and more.

--- a/EventDirector/MainWindow.xaml
+++ b/EventDirector/MainWindow.xaml
@@ -10,12 +10,13 @@
     <DockPanel>
         <Menu DockPanel.Dock="Top">
             <MenuItem Header="_File" >
-                <MenuItem Header="_Settings" Click="MenuItem_Click" Uid="1" />
+                <MenuItem Header="About" Click="MenuItem_Click" Uid="15" />
+                <MenuItem Header="Settings" Click="MenuItem_Click" Uid="1" />
                 <Separator />
-                <MenuItem Header="_Clear Database" Click="MenuItem_Click" Uid="3" />
-                <MenuItem Header="_Rebuild Database" Click="MenuItem_Click" Uid="2" />
+                <MenuItem Header="Clear Database" Click="MenuItem_Click" Uid="3" />
+                <MenuItem Header="Rebuild Database" Click="MenuItem_Click" Uid="2" />
                 <Separator />
-                <MenuItem Header="_Exit" Click="MenuItem_Click" Uid="4" />
+                <MenuItem Header="Exit" Click="MenuItem_Click" Uid="4" />
             </MenuItem>
             <MenuItem Header="Import">
                 <MenuItem Header="Import Participants (CSV)" Click="MenuItem_Click" Uid="5" />
