Feature get. Added the option to print out day of registrant information automatically as they come in. You can also manually print a day of race registrant's information by selecting them in the list. Updated database to keep track of this information.

--- a/EventDirector/DayOfParticipantsList.xaml
+++ b/EventDirector/DayOfParticipantsList.xaml
@@ -15,6 +15,7 @@
         <ComboBox x:Name="dofEventComboBox" Grid.Row="0" Height="25" Width="150" HorizontalAlignment="Left" Margin="65,0,0,0" SelectedIndex="0" SelectionChanged="EventComboBox_SelectionChanged">
             <ComboBoxItem Content="All" />
         </ComboBox>
+        <Button Content="Print Participant" HorizontalAlignment="Left" Margin="225,0,0,0" Grid.Row="0" Height="25" Width="130" Click="PrintParticipant" />
         <ListView x:Name="participantsListView" Grid.Row="1" Width="Auto" Height="Auto" ScrollViewer.HorizontalScrollBarVisibility="Auto">
             <ListView.View>
                 <GridView>
