--- a/EventDirector/ParticipantsList.xaml
+++ b/EventDirector/ParticipantsList.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:EventDirector"
         mc:Ignorable="d"
-        Title="Participants" Height="800" Width="1200" Closed="Window_Closed">
+        Title="Participants" Height="500" Width="1000" MinWidth="800" MinHeight="500" Closed="Window_Closed">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="40" />
