--- a/EventDirector/KioskSetup.xaml
+++ b/EventDirector/KioskSetup.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="EventDirector.KioskSettup"
+﻿<Window x:Class="EventDirector.KioskSetup"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:EventDirector"
         mc:Ignorable="d"
-        Title="Kiosk Settup" Height="420" Width="420" ResizeMode="NoResize"
+        Title="Kiosk Setup" Height="420" Width="420" ResizeMode="NoResize"
         Closing="Window_Closing"
         >
     <Grid>
