--- a/EventDirector/KioskSetupPage3.xaml
+++ b/EventDirector/KioskSetupPage3.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="EventDirector.KioskSettupPage1"
+﻿<Page x:Class="EventDirector.KioskSetupPage3"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,10 +6,11 @@
       xmlns:local="clr-namespace:EventDirector"
       mc:Ignorable="d" 
       d:DesignHeight="380" d:DesignWidth="380"
-      Title="Kiosk Settup">
+      Title="KioskSetupPage3">
 
     <Grid>
-        <TextBlock Text="This tool will enable the kiosk ability of the tablet app for a specific event.  Please click next to continue." FontSize="32" TextWrapping="Wrap" Margin="10,40,10,0" VerticalAlignment="Top" HorizontalAlignment="Center"/>
+        <TextBlock Text="Next you will set the liability waiver for your event.  Please ensure this meets all of the requirements you may have for your event." FontSize="30" TextWrapping="Wrap" Margin="10,40,10,0"
+               HorizontalAlignment="Center" VerticalAlignment="Top" />
         <Button Content="Next" Height="25" Width="100" VerticalAlignment="Bottom" Margin="0,0,150,10" Click="Next_Click" />
         <Button Content="Cancel" Height="25" Width="100" VerticalAlignment="Bottom" Margin="150,0,0,10" Click="Cancel_Click" />
     </Grid>
