--- a/EventDirector/MainWindow.xaml
+++ b/EventDirector/MainWindow.xaml
@@ -32,6 +32,7 @@
                 <MenuItem Header="List Participants" Click="MenuItem_Click" Uid="7" />
                 <MenuItem Header="List Day Of Registrants" Click="MenuItem_Click" Uid="10" />
                 <MenuItem Header="Setup Kiosk" Click="MenuItem_Click" Uid="9" />
+                <MenuItem Header="Setup Next Year Registration" Click="MenuItem_Click" Uid="16" />
                 <!-- <MenuItem Header="_Assign Bibs/Chips" Click="MenuItem_Click" Uid="6" /> -->
             </MenuItem>
         </Menu>
@@ -76,6 +77,8 @@
                         <GridViewColumn Header="ID" Width="50" DisplayMemberBinding="{Binding Identifier}" />
                         <GridViewColumn Header="Name" Width="200" DisplayMemberBinding="{Binding Name}" />
                         <GridViewColumn Header="Date" Width="100" DisplayMemberBinding="{Binding Date}" />
+                        <GridViewColumn Header="Next Year" Width="50" DisplayMemberBinding="{Binding NextYear}" />
+                        <GridViewColumn Header="Shirt Optional" Width="50" DisplayMemberBinding="{Binding ShirtOptional}" />
                     </GridView>
                 </ListView.View>
             </ListView>
