--- a/EventDirector/NextYearSetupPage1.xaml
+++ b/EventDirector/NextYearSetupPage1.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="EventDirector.KioskSettupPage2"
+﻿<Page x:Class="EventDirector.NextYearSetupPage1"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,17 +6,17 @@
       xmlns:local="clr-namespace:EventDirector"
       mc:Ignorable="d" 
       d:DesignHeight="380" d:DesignWidth="380"
-      Title="KioskSettupPage2">
+      Title="NextYearSetupPage1">
 
     <Grid>
         <Label Content="Please choose an event:" FontSize="18" Margin="20,115,20,0"
                HorizontalAlignment="Left" VerticalAlignment="Top" />
         <ComboBox x:Name="events" Margin="20,150,20,0" Width="340"
                HorizontalAlignment="Left" VerticalAlignment="Top" />
-        <Label Content="Enable Automatic Printing of New Registrants?" FontSize="16" Margin="20,180,20,0"
+        <Label Content="Are Shirts Optional?" FontSize="16" Margin="20,180,20,0"
                HorizontalAlignment="Left" VerticalAlignment="Top" />
-        <RadioButton x:Name="yesRadio" GroupName="Print" Content="Yes" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="20,215,20,0" />
-        <RadioButton GroupName="Print" IsChecked="True" Content="No" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="100,215,20,0" />
+        <RadioButton x:Name="yesRadio" GroupName="Print" IsChecked="True" Content="Yes" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="20,215,20,0" />
+        <RadioButton GroupName="Print" Content="No" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="100,215,20,0" />
         <Button Content="Next" Height="25" Width="100" VerticalAlignment="Bottom" Margin="0,0,150,10" Click="Next_Click" 
                HorizontalAlignment="Center" />
         <Button Content="Cancel" Height="25" Width="100" VerticalAlignment="Bottom" Margin="150,0,0,10" Click="Cancel_Click"
